// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webex Remote Media component snapshot matches snapshot of disabled remote audio 1`] = `
<div
  className="remote-media"
>
  <video
    autoPlay={true}
    playsInline={true}
  />
</div>
`;

exports[`Webex Remote Media component snapshot matches snapshot of disabled remote video 1`] = `
<div
  className="remote-media"
>
  <audio
    autoPlay={true}
  />
</div>
`;

exports[`Webex Remote Media component snapshot matches snapshot of enabled remote audio & video 1`] = `
<div
  className="remote-media"
>
  <video
    autoPlay={true}
    playsInline={true}
  />
  <audio
    autoPlay={true}
  />
</div>
`;

exports[`Webex Remote Media component snapshot matches snapshot while loading 1`] = `
<div
  className="remote-media"
>
  <Badge
    className=""
    rounded={true}
  >
    <Spinner
      className=""
      color="black"
      percentage={null}
      showCheck={false}
      showPercentage={false}
      size={16}
    />
    <div>
      Connecting
    </div>
  </Badge>
</div>
`;
